# python-mailable

./: Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: python-package.yml
python_mailable/: mailable.py
tests/integration/: test_mailable_integration.py
tests/integration/templates/: order_cancelled.txt.j2  order_shipped.html.j2
tests/unit/: test_mailable_unit.py
