[project]
authors = [{ name = "Brady Renting" }]
name = "python-mailable"
version = "0.1.0"
description = "An expressive email builder for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]
