[project]
authors = [{ name = "Brady Renting" }]
name = "python-mailable"
version = "0.1.0"
description = "An expressive email builder for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "ty>=0.0.46",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
docstring-code-format = true
